--- a/docker/root/defaults/settings.json
+++ b/docker/root/defaults/settings.json
@@ -3,6 +3,6 @@
   "baseURL": "",
   "address": "",
   "log": "stdout",
-  "database": "/database/filebrowser.db",
-  "root": "/srv"
+  "database": "/var/filebrowser.db",
+  "root": "/var/data"
 }
