--- a/docker_config.json
+++ b/docker_config.json
@@ -3,6 +3,6 @@
   "baseURL": "",
   "address": "",
   "log": "stdout",
-  "database": "/database.db",
-  "root": "/srv"
+  "database": "/var/db/database.db",
+  "root": "/var/data"
 }
